# PicoDVI

./: .gitattributes  .gitignore  LICENSE  Readme.md  library.properties
.github/workflows/: build.yml  githubci.yml
examples/: Readme.md
examples/16bit_hello/: 16bit_hello.ino
examples/1bit_double_buffer/: 1bit_double_buffer.ino
examples/1bit_single_buffer/: 1bit_single_buffer.ino
examples/1bit_text/: 1bit_text.ino
examples/8bit_double_buffer/: 8bit_double_buffer.ino
examples/8bit_single_buffer/: 8bit_single_buffer.ino
examples/file_access/: file_access.ino
examples/hello/: hello.ino
examples/screensavers/aquarium/: aquarium.ino  sprites.h
examples/screensavers/boing/: boing.ino  graphics.h
examples/screensavers/logobounce/: logobounce.ino  sprite.h
examples/screensavers/toasters/: sprites.h  toasters.ino
examples/screensavers/tvhost/: tvhost.ino
examples/virtual_spitft/: virtual_spitft.ino
hardware/: Readme.md
hardware/board/: picodvi.kicad_pcb  picodvi.lib  picodvi.net  picodvi.pro  picodvi.xml  sym-lib-table
hardware/board/bom/: ibom.html
hardware/board/gerb/: picodvi-B.Cu.gbr  picodvi-B.Mask.gbr  picodvi-B.Paste.gbr  picodvi-B.SilkS.gbr  picodvi-B_Mask.gbr  picodvi-B_SilkS.gbr  picodvi-F.Cu.gbr  picodvi-F.Mask.gbr  picodvi-F_Cu.gbr  picodvi-F_Mask.gbr  picodvi-F_Paste.gbr  picodvi-In1.Cu.gbr  picodvi-NPTH-drl_map.ps  picodvi-NPTH.drl  (+1 more)
hardware/mini_board/: .gitignore  fp-info-cache  fp-lib-table  picodvi-cache.lib  picodvi-rescue.lib  picodvi.bak  picodvi.kicad_pcb  picodvi.kicad_pcb-bak  picodvi.kicad_prl  picodvi.kicad_pro  picodvi.kicad_sch  picodvi.sch  sym-lib-table
hardware/pmod_hdmi/: picodvi_pmod-cache.lib  picodvi_pmod.bak  picodvi_pmod.kicad_pcb  picodvi_pmod.kicad_pcb-bak  picodvi_pmod.net  picodvi_pmod.sch
hardware/pmod_hyperram/: fp-lib-table  pmod_hyperram-cache.lib  pmod_hyperram.bak  pmod_hyperram.kicad_pcb  pmod_hyperram.kicad_pcb-bak  pmod_hyperram.net  pmod_hyperram.sch  sym-lib-table
hardware/pmod_qspi_psram/: pmod_qspi_psram-cache.lib  pmod_qspi_psram.bak  pmod_qspi_psram.kicad_pcb  pmod_qspi_psram.kicad_pcb-bak  pmod_qspi_psram.net  pmod_qspi_psram.sch
software/: .gitignore  CMakeLists.txt  Readme.md  dons_comments.txt  gdbinit  pico_sdk_import.cmake
software/apps/: CMakeLists.txt
software/apps/bad_apple/: CMakeLists.txt  main.c  rle_decompress.S  rle_decompress.h  test_frame.h
software/apps/bad_apple/video/: .gitignore  Readme.md  ckcompress  mkframes.sh  packframes.mk  rle_compress.py
software/apps/christmas_snowflakes/: CMakeLists.txt  main.c
software/apps/colortext/: CMakeLists.txt  font.h  gen.c  gen.h  main.c  scanout.S  scanout.h  text.c  text.h
software/apps/colour_terminal/: CMakeLists.txt  main.c  tmds_encode_font_2bpp.S  tmds_encode_font_2bpp.h
software/apps/dht_logging/: CMakeLists.txt  dht.c  dht.h  main.c
software/apps/dual_display/: CMakeLists.txt  main.c
software/apps/hello_dvi/: CMakeLists.txt  main.c
software/apps/hyperram_test/: CMakeLists.txt  main.c
software/apps/mandel-full/: CMakeLists.txt  main.c  mandelbrot.c  mandelbrot.h
software/apps/mandelbrot/: CMakeLists.txt  main.c
software/apps/moon/: CMakeLists.txt  main.c
software/apps/my_terminal/: CMakeLists.txt  main.c  main.c.bak2
software/apps/raw_av_player/: CMakeLists.txt  audio.hpp  main.cpp  pimoroni_pico_import.cmake
software/apps/sprite_bounce/: CMakeLists.txt  main.c
software/apps/sprite_bounce_audio/: CMakeLists.txt  main.c
software/apps/terminal/: CMakeLists.txt  main.c
software/apps/tiles/: CMakeLists.txt  main.c  map_test_zelda_mini.h
software/apps/tiles_and_sprites/: CMakeLists.txt  main.c  tilemap.h
software/apps/tiles_parallax/: CMakeLists.txt  main.c  tilemap_background.h  tilemap_foreground.h
software/apps/vista/: CMakeLists.txt  main.c
software/apps/vista-palette/: CMakeLists.txt  README.md  main.c
software/apps/vista-palette/scripts/: bmp-dump.py  builduf2
software/apps/vista/amiga/: .gitignore  Readme.md  mkframes.sh
software/assets/: .gitattributes  eben_128x128.h  eben_128x128_flip.h  eben_128x128_ragb2132.h  eben_128x128_rgab5515.h  font_8x8.h  moon_1bpp_1280x720.h  moon_1bpp_640x480.h  moon_2bpp_1280x720.h  moon_2bpp_640x480.h  mountains_640x128_rgb565.h  mountains_640x160_rgb565.h  mountains_640x480_rgb565.h  oga_zelda_overworld_flat_rgab5515.h  platformer_in_the_forest_rgab5515.h  raspberry_128x128_ragb2132.h  raspberry_128x128_rgab5515.h  raspberry_256x256_ragb2132.h  raspberry_256x256_rgab5515.h  snowflakes.h  testcard_320x240_rgb332.h  testcard_320x240_rgb565.h  testcard_display1_rgb332.h  testcard_display2_rgb332.h  vista_data.uf2  vista_data_rp2350.uf2  wikimedia_christmas_tree_in_field_320x240_rgb565.h  zelda_mini_plus_walk_rgab5515.h
software/fonts/: convert_font.py
software/include/: common_dvi_pin_configs.h  font_8x16.h
software/libdvi/: CMakeLists.txt  audio_ring.c  audio_ring.h  data_packet.c  data_packet.h  dvi.c  dvi.h  dvi_config_defs.h  dvi_serialiser.c  dvi_serialiser.h  dvi_serialiser.pio  dvi_serialiser.pio.h  dvi_timing.c  dvi_timing.h  tmds_encode.S  tmds_encode.c  tmds_encode.h  tmds_encode_1bpp.pio  tmds_table.h  tmds_table_4bpp.h  tmds_table_fullres.h  tmds_table_fullres_shifted.h  tmds_table_gen.py  util_queue_u32_inline.h
software/libhyperram/: CMakeLists.txt  hyperram.c  hyperram.h  hyperram.pio
software/libsprite/: CMakeLists.txt  affine_transform.h  sprite.S  sprite.c  sprite.h  sprite_armv6m.S  sprite_asm_const.h  sprite_riscv.S  tile.S  tile.c  tile.h  tile_riscv.S
software/scripts/: gen_4bpp_lut.py  packtiles  repack_pcf.py  tmdsdump.py  tmdsfont
src/: PicoDVI.cpp  PicoDVI.h  Readme.md  dvi.c  dvi.h  dvi_config_defs.h  dvi_serialiser.c  dvi_serialiser.h  dvi_serialiser.pio.h  dvi_timing.c  dvi_timing.h  font_8x8.h  fourwire.pio  libdvi  tmds_encode.S  tmds_encode.c  tmds_encode.h  tmds_table.h  tmds_table_fullres.h  util_queue_u32_inline.h
src/libdvi/: CMakeLists.txt  dvi.c  dvi.h  dvi_config_defs.h  dvi_serialiser.pio  dvi_timing.c  dvi_timing.h  tmds_table.h  tmds_table_fullres.h  tmds_table_gen.py
(+32 files in other folders)
