add_subdirectory(bad_apple)
add_subdirectory(colour_terminal)
add_subdirectory(dht_logging)
add_subdirectory(dual_display)
add_subdirectory(hello_dvi)
add_subdirectory(mandelbrot)
add_subdirectory(moon)
add_subdirectory(sprite_bounce)
add_subdirectory(terminal)
add_subdirectory(vista)
add_subdirectory(vista-palette)
add_subdirectory(mandel-full)
