if (NOT PICO_RISCV)
	# Arm assembly needs porting to RISC-V
	add_subdirectory(bad_apple)
endif()
add_subdirectory(colour_terminal)
add_subdirectory(christmas_snowflakes)
add_subdirectory(dht_logging)
add_subdirectory(dual_display)
add_subdirectory(hello_dvi)
add_subdirectory(mandelbrot)
add_subdirectory(moon)
add_subdirectory(sprite_bounce)
add_subdirectory(terminal)
add_subdirectory(tiles)
add_subdirectory(tiles_and_sprites)
add_subdirectory(tiles_parallax)
add_subdirectory(vista)
if (PICO_RP2040)
	# Needs porting to use XIP stream instead of SSI, as was done to vista
	add_subdirectory(vista-palette)
endif()
add_subdirectory(mandel-full)
